--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -14,7 +14,7 @@
     ],
     "routes" : [
         {
-            "src" : "/(.*)", "dest" : "/"
+            "src" : "/(.*)", "dest" : ""
         }
     ]
 
