--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "proxy" : "https://e-shop-api-five.vercel.app",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
