--- a/backend/.env
+++ b/backend/.env
@@ -2,3 +2,4 @@
 MONGODB_URI =mongodb+srv://xander:gUrldja2FpEMPBvO@shop.mlynq2l.mongodb.net/shop?retryWrites=true&w=majority&appName=shop
 TOKEN_SECRET_KEY = "TEGHHHEWEGHFDFDUGFYRWRSFGXGJYYFGBJJHGCC"
 FRONTEND_URL = https://e-shop-sigma-nine.vercel.app
+PORT = 5000
