--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -4,6 +4,14 @@
     "version" : 2,
     "builds" : [
         {
+           "src" : "*.html",
+            "use" : "@vercel/static"  
+        },
+         {
+            "src" : "*.js",
+            "use" : "@vercel/node"
+        },
+        {
             "src" : "index.js",
             "use" : "@vercel/static"
         },
