--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -22,7 +22,7 @@
     ],
     "routes" : [
         {
-            "src" : "/(.*)", "dest" : ""
+            "src" : "/(.*)", "dest" : "/"
         }
     ]
 
